# RawTherapee-Fork

./: .gitignore  CMakeLists.txt  COMPILE.txt  clean.sh  index.html
rtdata/: CMakeLists.txt
rtdata/languages/: English (US)
rtdata/languages.old/: English (US)
rtdata/themes/: Cillop Midnite  GM Looks  Shiny Black
rtengine/: CMakeLists.txt  curves.cc  dcrop.cc  image16.cc  imagedata.cc  imageio.cc  imagesource.h  improccoordinator.cc  improcfun.cc  init.cc  procevents.h  procparams.cc  procparams.h  rawimagesource.cc  rawimagesource.h  refreshmap.cc  refreshmap.h  rtengine.h  rtthumbnail.cc  settings.h  simpleprocess.cc  stdimagesource.cc  stdimagesource.h
rtexif/: CMakeLists.txt  canonattribs.cc  fujiattribs.cc  nikonattribs.cc  olympusattribs.cc  pentaxattribs.cc  rtexif.cc  sonyminoltaattribs.cc  stdattribs.cc
rtgui/: CMakeLists.txt  RawDemosaicing.cc  RawDemosaicing.h  dirbrowser.cc  editorpanel.cc  filebrowserentry.cc  filecatalog.cc  filepanel.cc  filepanel.h  histogrampanel.cc  main.cc  mycurve.cc  options.cc  options.h  paramsedited.cc  paramsedited.h  preferences.cc  preferences.h  profilepanel.cc.rej  resize.cc  rtwindow.cc  thumbbrowserbase.cc  thumbbrowserentrybase.cc  toolpanelcoord.cc  toolpanelcoord.h
tools/osx/: Info.plist  make-app-bundle  rtstart  start
tools/osx/RawTherapee Package.pmdoc/: 01rawtherapee-contents.xml  01rawtherapee.xml  02rawtherapee.xml  index.xml
winclude/libiptcdata/: _stdint.h
